19990721-04:12 EDT Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/gtapi.c
    * corrected color string Underline handling.
    * Much more color compatibility even for some undocumented
      behaviour.
      The only inconsistancy is for ie: ("w+/n*")  Clipper returns
      "w+*/n" - Harbour returns "w+/n*" This is on purpose, as it
      agrees with the documentation instead of observed behaviour.
      AFAIK, the only thing that may need change is for mono monitors.
      Is anyone using one?

19990721-09:30 CET Eddie Runia <eddie@runia>
  * source/vm/hvm.c
    Copy & Paste error

19990721-09:00 CET Jose Lalin
  * source/vm/hvm.c
    + added support for concatenation operator "-"
    + added support to generate correct runtime errors in functions:
    And(), Equal(), Greater(), GreaterEqual(),
    Inc(), Instring(), Less(), LessEqual(), Not(),
    NotEqual(), Minus(), Or(), Plus(), HB_LEN()
  + tests/working/strsub.prg
    tests for operator "-" on strings

19990721-09:00 CET Matthew Hamilton
  * tests/working/inifiles.prg
    * Case sensitive & Speed improvement

19990720-09:38 Alexander Kresin
  * source\hbpp\hbpp.c
    * Fixed bugs related to nested #ifdef, #ifndef
    * Fixed bug with '??' command

19990720-17:15 EDT David G. Holm <dholm@jsd-llc.com>
  * funclist.txt
    * Updated the status of several functions

19990720-20:55 GMT+1 Bruno Cantero <bruno@issnet.net>
  * makefile.b31
    Changed fixflex to bin\fixflex.
  * harbour.b31
    Added /iinclude to compile prg's.

19990720-20:10 CET Eddie Runia <eddie@runia.com>
  * source/vm/hvm.c
    wsize =*( (WORD *) ... part removed.

19990720-13:40 EDT Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/gtapi.c
    * If a color string of ("r/b,b/r" ) is used, the
      fifth param is set equal to the second. (as in clipper)

19990720-13:30 EDT Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/gtapi.c
    * implimented color attribute in gtWrite and gtScroll.