@@ -1,3 +1,7 @@
+19990721-15:50 CET Eddie Runia <eddie@runia.com>
+  * source/rtl/classes.c; source/rtl/transfrm.c
+    Clean-up of source
+
 19990721-04:12 EDT Paul Tucker <ptucker@sympatico.ca>
   * source/rtl/gtapi.c
     * corrected color string Underline handling.
